--- a/popup.css
+++ b/popup.css
@@ -8,7 +8,6 @@ body {
     color: #ffffff;
     width: 400px;
     border: 1px solid #a2a2a2;
-    border-radius: 10px;
     font-family: 'Zain', sans-serif;
     height: 550px;
 }
@@ -37,7 +36,9 @@ p {
 }
 
 h2 {
-    font-size: 22px
+    font-size: 22px;
+    padding-bottom: 0;
+    margin-bottom: 2px;
 }
 select {
     width: 100%;
@@ -52,6 +53,7 @@ button {
     /* width: 100%; */
     display: block;
     margin: 0 auto;
+    margin-top: 5px;
     padding: 10px;
     background-color: #4CAF50;
     color: white;
